# lvfs-arc

./: CMakeLists.txt
cmake/: FindLvfsArc.cmake
include/: IArchive
src/: CMakeLists.txt  lvfs_arc_Archive.cpp  lvfs_arc_Archive.h  lvfs_arc_IArchive.cpp  lvfs_arc_IArchive.h  lvfs_arc_LibArchive.cpp  lvfs_arc_LibArchive.h  lvfs_arc_LibUnrar.cpp  lvfs_arc_LibUnrar.h  lvfs_arc_Package.cpp  lvfs_arc_Package.h
src/libarchive/: lvfs_arc_libarchive_Archive.cpp  lvfs_arc_libarchive_Archive.h
src/libunrar/: lvfs_arc_libunrar_Archive.cpp  lvfs_arc_libunrar_Archive.h
